# advanced-pymc-marketing-examples

./: .gitignore  AGENTS.md  BLOG_STYLE_GUIDE.md  DATA.md  README.md  generate_blog_figures.py  pyproject.toml  run_notebook.py
blogs/: chronos_pymc_marketing.md  optuna_pymc_marketing_blog.md  priors_analysis_mmm.md
data/: baseline_components.csv  mmm_data.csv
data/mmm-chronos/: employment_data.csv  ground_truth_parameters.json  media_spend.csv  mmm_chronos_data.csv  temperature_data.csv
data/mmm-simple/: channel_contributions.csv  dataset_summary.json  ground_truth_parameters.json
models/optimization_results/: best_hyperparameters.json  best_hyperparameters_crps.json  final_evaluation_crps.json  optimization_trials.csv  optimization_trials_crps.csv
notebooks/: 01_minimal_mmm_example.ipynb  02_optuna_hyperparameter_optimization.ipynb  03_optuna_crps_validation.ipynb  04_prior_sensitivity_analysis.ipynb  05_comprehensive_prior_sensitivity.ipynb  05_comprehensive_prior_sensitivity_script.py  05_prior_sensitivity_analysis.ipynb  06_DRAFT_baseline_comparison_gp_vs_static.ipynb  06_comprehensive_prior_sensitivity.ipynb  07_baseline_comparison_gp_vs_static.ipynb  07_chronos_pymc_marketing.ipynb  chronos_pymc_marketing.ipynb
notebooks/.ipynb_checkpoints/: 02_optuna_hyperparameter_optimization-checkpoint.ipynb  03_optuna_crps_validation-checkpoint.ipynb
scripts/: download_and_generate_data.py  export_notebook_03_plots.py  export_notebook_07_plots.py
