[project]
name = "blog-optuna-pymc-marketing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "ipykernel>=7.0.1",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpyro>=0.19.0",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pandera>=0.21.0",
    "polars>=1.34.0",
    "pyarrow>=19.0.0",
    "pymc-marketing>=0.16.0",
    "pytensor>=2.31.3,<2.35.0",
    "rich>=14.1.0",
]
